fix: Ajuste de coverage para >80%, correcao no POM e visibilidade de metodo